--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,19 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.example.anotetaker"
+        applicationId "com.wekul.anotetaker"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    lintOptions {
+
+        checkReleaseBuilds false
+
     }
 
     buildTypes {
